// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Boat /> should render 1`] = `
<div
  className="boat boat_position_left"
  onTransitionEnd={[Function]}
>
  <audio
    src="assets/audio/wave.mp3"
  />
</div>
`;

exports[`<Boat /> should render items 1`] = `
<div
  className="boat boat_position_left"
  onTransitionEnd={[Function]}
>
  <div
    className="boat__character"
  >
    <div
      className="character character_skin_sheep character_packed"
      onClick={[Function]}
      title="sheep"
    />
  </div>
  <div
    className="boat__character"
  >
    <div
      className="character character_skin_farmer character_packed"
      onClick={[Function]}
      title="farmer"
    />
  </div>
  <audio
    src="assets/audio/wave.mp3"
  />
</div>
`;
